--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,9 @@
+fail_fast: false
 repos:
   - repo: https://github.com/Takishima/cmake-pre-commit-hooks
-    rev: 1.5.2
+    rev: 'v1.5.2'
     hooks:
       - id: clang-format
+        args: [-i]
       - id: clang-tidy
+        args: [--config-file=.clang-tidy, --fix-errors]
