--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,3 +26,5 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: pre-commit/action@v2.0.3
       - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          add_options: '-u'
