--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -25,6 +25,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - uses: pre-commit/action@v2.0.3
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Update pull request with fixed formatting
+        if: always()
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           add_options: '-u'
