--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -24,9 +24,21 @@ jobs:
             sudo ln -s /usr/bin/clang-tidy-13 /usr/bin/clang-tidy
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - uses: pre-commit/action@v2.0.3
+      - name: Check code style first phase
+        uses: pre-commit/action@v2.0.3
+        id: phase1
       - name: Update pull request with fixed formatting
-        if: always()
+        if: always() && (steps.phase1.outcome == 'failure')
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           add_options: '-u'
+      - name: Check code style second phase
+        if: always() && (steps.phase1.outcome == 'failure')
+        uses: pre-commit/action@v2.0.3
+        id: phase2
+      - name: Close pull request if still bad
+        if: always() && (steps.phase1.outcome == 'failure' && steps.phase2.outcome == 'failure')
+        uses: superbrothers/close-pull-request@v3
+        with:
+          comment: "Automated fixes were unable to conform code to required code style. Manual intervention required."
+        
