Treat readability warnings as errors.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,4 +6,4 @@ repos:
       - id: clang-format
         args: [-i]
       - id: clang-tidy
-        args: [--config-file=.clang-tidy, --fix-errors]
+        args: []
